--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <!-- Rodapé da página -->
     <div class="container-rodape"> 
       <p>&copy; Manhattan - Coffee House - Todos os direitos reservados</p>
-      <p>Desenvolvido por <span>"nome do aluno"</span></p>
+      <p>Desenvolvido por <span>Mariele</span></p>
       <a href="#banner"></a>
     </div>
     <!-- Fim do rodapé da página -->
